2008-01-11  Bruno Haible  <bruno@clisp.org>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/output-order.test: New test, for the stable output fix.
	* tests/Makefile.am: Update.

2008-01-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (dist-hook): New, ensure world-executable tests.
	* THANKS: Update.
	Report by Arto C. Nirkko.

	* tests/acloca20.test: Use `--force' with the second $AUTOCONF,
	to force update on fast machines where both autoconf invocations
	happen within the same second.
	Report by Greg Schafer.

2008-01-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (scan_autoconf_files): Sort loop over
	%required_aux_file, for stable verbose output.
	Report by Bruno Haible.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: Sync from
	upstream.

	* tests/ccnoco.test (Mycomp): Use a tighter match for -c -o,
	to avoid matching for example `LDFLAGS=-Wl,--sort-common'.
	* THANKS: Update.
	Report and analysis by Carsten Lohrke and Mike Frysinger.

2008-01-07  Stepan Kasal  <skasal@redhat.com>

	* automake.in (handle_texinfo_helper, handle_lib_objects): Fix
	typos in comments.

2008-01-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Bump copyright years.
	* aclocal.in (write_aclocal, version): Likewise.
	* automake.in ($gen_copyright, version): Likewise.
	* doc/automake.texi: Likewise.

2007-12-18  Jim Meyering  <meyering@redhat.com>

	* lib/gnupload (GPG): Don't use an absolute path.
	This reverts part of the 2004-01-28 change.

2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/Automake/FileUtils.pm (open_quote): New function.
	(update_file, contents): Use it.

	Reword the copyright notices to match what's suggested in GPLv3.

2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/defs.in: Quote $srcdir, $PATH; skip libtool and gettext
	tests if the absolute source or build tree name contain whitespace.

	Modify some tests for absolute trees containing whitespace.