@@ -70,6 +70,7 @@ Diab Jerius		djerius@cfa.harvard.edu
 Didier Cassirame	faded@free.fr
 Dieter Baron		dillo@stieltjes.smc.univie.ac.at
 Dieter Jurzitza		DJurzitza@harmanbecker.com
+Dilyan Palauzov		Dilyan.Palauzov@aegee.org
 Dmitry Mikhin		dmitrym@acres.com.au
 Doug Evans		devans@cygnus.com
 Duncan Gibson		duncan@thermal.esa.int
@@ -268,6 +269,7 @@ Robert Swafford		robert.swafford@l-3com.com
 Roberto Bagnara		bagnara@cs.unipr.it
 Roman Fietze		roman.fietze@telemotive.de
 Ronald Landheer		ronald@landheer.com
+Roumen Petrov		bugtrack@roumenpetrov.info
 Rusty Ballinger		rusty@rlyeh.engr.sgi.com
 Ryan T. Sammartino	ryants@shaw.ca
 Sam Hocevar		sam@zoy.org
