@@ -7481,14 +7481,15 @@ hello_TEXINFOS = gpl.texi
 @cindex @file{texinfo.tex}
 
 By default, Automake requires the file @file{texinfo.tex} to appear in
-the same directory as the Texinfo source (this can be changed using the
-@code{TEXINFO_TEX} variable, see below).  However, if you used
-@code{AC_CONFIG_AUX_DIR} in @file{configure.ac} (@pxref{Input, , Finding
-`configure' Input, autoconf, The Autoconf Manual}), then
-@file{texinfo.tex} is looked for there.  Automake supplies
-@file{texinfo.tex} if @option{--add-missing} is given.
-
-@opindex no-texinfo.tex
+the same directory as the @file{Makefile.am} file that lists the
+@file{.texi} files.  If you used @code{AC_CONFIG_AUX_DIR} in
+@file{configure.ac} (@pxref{Input, , Finding `configure' Input,
+autoconf, The Autoconf Manual}), then @file{texinfo.tex} is looked for
+there.  In both cases, automake then supplies @file{texinfo.tex} if
+@option{--add-missing} is given, and takes care of its distribution.
+However, if you set the @code{TEXINFO_TEX} variable (see below),
+it overrides the location of the file and turns off its installation
+into the source as well as its distribution.
 
 The option @option{no-texinfo.tex} can be used to eliminate the
 requirement for the file @file{texinfo.tex}.  Use of the variable
