@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003, 2004, 2007  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004, 2007, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,6 +18,7 @@
 # Report from Tom Tromey.
 # Also make sure Automake ignores in-line comments when using variables,
 # but preserve them in the output.
+# Also make sure TEXINFO_TEX is not distributed.
 
 required='makeinfo tex'
 . ./defs || exit 1
@@ -40,6 +41,8 @@ info_TEXINFOS = main.texi
 sure_it_exists:
 	test -f $(TEXINFO_TEX)
 	test -d "$(am__TEXINFO_TEX_DIR)"
+sure_it_is_not_distributed: distdir
+	test ! -f $(distdir)/tex/texinfo.tex
 END
 
 cat > main.texi << 'END'
@@ -67,3 +70,4 @@ test -f tex/texinfo.tex
 $MAKE sure_it_exists
 $MAKE distcheck
 grep 'TEXINFO_TEX = .* # some comment w/ a slash' Makefile
+$MAKE sure_it_is_not_distributed
