@@ -1,3 +1,15 @@
+2008-01-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Clarify texinfo.tex and TEXINFO_TEX semantics.
+	* doc/automake.texi (Texinfo): Clarify that by default,
+	texinfo.tex is searched in the same directory as the Makefile.am
+	that needs it.  Clarify that TEXINFO_TEX has precedence over
+	AC_CONFIG_AUX_DIR, and that it requires the user to install and
+	distribute it.
+	* tests/txinfo22.test: Ensure TEXINFO_TEX is not distributed.
+	* THANKS: Update.
+	Reports by Dilyan Palauzov and Roumen Petrov.
+
 2008-01-11  Bruno Haible  <bruno@clisp.org>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
